blog/infra/k8s/notes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservice
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"    # to enable the use of REGEX in the path matcher
spec:
  rules:
    - http:
        paths:                    # the match order => most important at top, least important at bottom
          - path: /posts          # POST /posts -- since ingress cannot differenciate HTTP methods, use different endpoint for the API
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /query/posts    # GET /posts
            backend:
              serviceName: query-clusterip-srv
              servicePort: 4004
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-clusterip-srv
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: client-clusterip-srv
              servicePort: 3000
